Add base shop api

--- a/src/Resources/config/routing.yml
+++ b/src/Resources/config/routing.yml
@@ -1,2 +1,6 @@
 bitbag_sylius_wishlist_plugin_shop:
     resource: "@BitBagSyliusWishlistPlugin/Resources/config/routing.yml"
+
+artis_wishlist_plugin_shop_api:
+    resource: "@DHArtisWishlistPlugin/Resources/config/routing/api.yml"
+    prefix: /shop-api
