--- a/composer.json
+++ b/composer.json
@@ -4,12 +4,13 @@
     "keywords": ["artis", "artis-plugin", "sylius", "sylius-plugin"],
     "license": "MIT",
     "require": {
-        "php": ">=7.3",
+        "php": "^7.4",
         "bitbag/wishlist-plugin": "^1.5",
-        "sylius/shop-api-plugin": "^1.1"
+        "sylius/shop-api-plugin": "^1.2",
+        "friendsofsymfony/oauth-server-bundle": ">2.0.0-alpha.0 ^2.0@dev"
     },
     "require-dev": {
-        "behat/behat": "^3.6.1",
+        "behat/behat": "^3.7",
         "behat/mink-selenium2-driver": "^1.4",
         "dmore/behat-chrome-extension": "^1.3",
         "dmore/chrome-mink-driver": "^2.7",
@@ -20,22 +21,24 @@
         "friends-of-behat/suite-settings-extension": "^1.0",
         "friends-of-behat/symfony-extension": "^2.1",
         "friends-of-behat/variadic-extension": "^1.3",
-        "lakion/mink-debug-extension": "^1.2.3",
-        "phpspec/phpspec": "^6.1",
+        "phpspec/phpspec": "^7.0",
         "phpstan/extension-installer": "^1.0",
-        "phpstan/phpstan": "0.12.25",
-        "phpstan/phpstan-doctrine": "0.12.13",
+        "phpstan/phpstan": "0.12.80",
+        "phpstan/phpstan-doctrine": "0.12.32",
         "phpstan/phpstan-strict-rules": "^0.12.0",
         "phpstan/phpstan-webmozart-assert": "0.12.4",
-        "phpunit/phpunit": "^8.5",
-        "sensiolabs/security-checker": "^6.0",
+        "phpunit/phpunit": "^9.5",
         "sylius-labs/coding-standard": "^3.1",
-        "symfony/browser-kit": "^4.4",
-        "symfony/debug-bundle": "^4.4|^5.0",
-        "symfony/dotenv": "^4.4|^5.0",
-        "symfony/intl": "^4.4|^5.0",
-        "symfony/web-profiler-bundle": "^4.4|^5.0",
-        "symfony/web-server-bundle": "^4.4|^5.0"
+        "symfony/browser-kit": "^4.4 || ^5.2",
+        "symfony/debug-bundle": "^4.4 || ^5.2",
+        "symfony/dotenv": "^4.4 || ^5.2",
+        "symfony/intl": "^4.4 || ^5.2",
+        "symfony/web-profiler-bundle": "^4.4 || ^5.2",
+        "symfony/web-server-bundle": "^4.4|^5.2",
+        "vimeo/psalm": "4.4.1",
+        "slevomat/coding-standard": "~6.0",
+        "symfony/dependency-injection": "<4.4.19 || >=5.0.0 <5.2.2",
+        "friends-of-behat/mink-debug-extension": "^2.0"
     },
     "config": {
         "preferred-install": {
@@ -54,21 +57,11 @@
             "DH\\ArtisWishlistPlugin\\Tests\\": "tests/"
         }
     },
-    "replace": {
-        "paragonie/random_compat": "2.*",
-        "symfony/polyfill-ctype": "*",
-        "symfony/polyfill-iconv": "*",
-        "symfony/polyfill-php71": "*",
-        "symfony/polyfill-php70": "*",
-        "symfony/polyfill-php56": "*"
-    },
     "conflict": {
+        "symfony/symfony": "4.1.8",
+        "symfony/browser-kit": "4.1.8",
+        "symfony/dom-crawler": "4.1.8",
+        "symfony/routing": "4.1.8",
         "symfony/doctrine-bridge": "4.4.16"
-    },
-    "extra": {
-        "symfony": {
-            "allow-contrib": false,
-            "require": "4.4.*"
-        }
     }
 }
